# h-crossing

./: Commentary.md  README.md  Rules.md  main.py  pyproject.toml
replays/: 1disk_a_wins.txt  2disk_blocking.txt
src/hanoi_crossing/: __main__.py  engine.py  main.py  models.py  server.py
static/: app.js  index.html  style.css
tests/: test_engine.py  test_models.py
